<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="content_text">Google officially announced its
    much-anticipated Pixel phones;the Pixel and Pixel XL, on
October 4. We attended Google’s London UK event, mirroring the
main one taking place in San Francisco, US, where the firm
unwrapped the new Android 7.1 Nougat devices which will
        apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 incehs\n FHD AMOLED at 441ppi\n 2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3
inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n Standby time(LTE): up to 19 days\n Talk time (3g/WCDMA): up to 26 hours\n
11. Internet use time (Wi-Fi): up to 13 hours\n
12.  Internet use time (LTE): up to 13 hours\n
13.  Video playback: up to 13 hours\n
14. Audio playback (via headset): up to 110 hours\n
15. Fast charging: up to 7 hours of use from only 15 minutes
of charging </string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="spesification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual Oleh</string>
    <string name="my_name">Taofiqur Rohman</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
</resources>
